# aizoomdoc-client-py

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  aizoomdoc.spec  check_db.py  check_images.py  create_default_user.py  create_settings.py  env.example  inspect_projects_doc.py  migrate_chats.py  pyproject.toml  requirements.txt  run_gui.py  setup.py  test_connection.py  test_encoding.py  tree_docs_909c6060-a2c1-442f-9f0e-0d62fdd5fcc5_133_23-ГК-АР3_blocks.json  tree_docs_909c6060-a2c1-442f-9f0e-0d62fdd5fcc5_133_23-ГК-АР3_document.md
.claude/: settings.local.json
src/aizoomdoc_client/: __init__.py  chat_widgets.py  cli.py  client.py  config.py  exceptions.py  gui.py  http_client.py  markdown_formatter.py  models.py
